tests/fixtures/invalid/pow_float_str_int.py
# Cannot call pow() with Float, Str, Int
x = pow(1.0, "hello", 1)
